--- a/paperone.html
+++ b/paperone.html
@@ -1717,7 +1717,8 @@
         <p><strong>Sampling frequency</strong> is:</p>
         <ul>
           <li>
-            The <strong>time interval</strong> at which samples are captured.
+            The <strong>regular time interval</strong> at which samples are
+            captured.
           </li>
           <li>
             <strong>44.1KHz</strong>, or 44,100 samples per second, for a
